--- a/hotel/pom.xml
+++ b/hotel/pom.xml
@@ -18,12 +18,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!--
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>jsp-api</artifactId>
 	    <version>2.0</version>
 	    <scope>provided</scope>
 	</dependency>
+	     -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
@@ -110,6 +112,16 @@
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
         <version>1.10</version>
+    </dependency>
+    <dependency>
+        <groupId>org.quartz-scheduler</groupId>
+        <artifactId>quartz</artifactId>
+        <version>2.2.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>3.2.4.RELEASE</version>
     </dependency>
   </dependencies>
   
