--- a/hotel/src/main/webapp/WEB-INF/web.xml
+++ b/hotel/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
-    <url-pattern>*.dao</url-pattern>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>EncodingFilter</filter-name>
